Fix alignments

--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -75,6 +75,7 @@ ul {
 }
 
 .align-center {
+  clear: both;
   text-align: center;
 
   img {
